<resources>
    <string name="app_name">Publication-app</string>

    <string name="dark_mode">mode gelap</string>
    <string name="light_mode">mode terang</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">kecamatan</string>
    <string name="title_bookmark">Favorite</string>
    <string name="title_activity_dashboard">dashboardActivity</string>
    <string name="title_activity_dashboarda">dashboard_a</string>
    <string name="title_activity_page">PageActivity</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">hapus</string>
</resources>