<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:menuCategory="container">


        <item
            android:id="@+id/notif"
            android:title="@string/title_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            app:showAsAction="always|collapseActionView"
             />

        <item
            android:id="@+id/theme_dark"
            android:title="@string/dark_mode"

            app:showAsAction="never" />
        <item
            android:id="@+id/theme_light"
            android:orderInCategory="100"
            android:title="@string/light_mode"
            app:showAsAction="never" />
    </group>
</menu>