<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bappeda.publication_app.ui.home.ui.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_search2"
            app:destination="@id/navigation_search" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_bookmark2"
            app:destination="@id/navigation_bookmark" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.bappeda.publication_app.ui.home.ui.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_bookmark"
        android:name="com.bappeda.publication_app.ui.home.ui.ui.bookmark.BookmarkFragment"
        android:label="@string/title_bookmark"
        tools:layout="@layout/fragment_notifications" />
</navigation>